@@ -38,7 +38,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 10837) $wgVariant is a user variant selected in the user's preferences
   if the $wgContLang does not have variant, then the $wgLang is used instead.
 * Oracle: maintenance/ora/user.sql script for creating DB user on oracle with
-  appropriate privileges
+  appropriate privileges. Creating this user with web-install page requires
+  oci8.privileged_connect set to On in php.ini.
 
 === New features in 1.16 ===
 
